# SEA-Module

./: README.md  datadump.json  manage.py  procfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
TMSystem/: asgi.py  settings.py  urls.py  wsgi.py
banks/: urls.py  views.py
banks/templates/banks/: bank_create.html  bank_delete.html  bank_list.html  bank_update.html
static/js/: app.js
templates/: 404.html  base.html  home_page.html  landing_page.html  navbar.html  unauthorised_message.html
templates/registration/: admin_signup.html  confirm_logout.html  login.html  regular_user_signup.html  signup.html  signup_option.html
traders/: urls.py  views.py
traders/templates/traders/: trader_create.html  trader_delete.html  trader_detail.html  trader_list.html  trader_update.html
trades/: admin.py  decorators.py  forms.py  models.py  signals.py  test.py  test_all.py  tests.py  urls.py  views.py
trades/migrations/: 0001_initial.py
trades/templates/trades/: trade_create.html  trade_delete.html  trade_detail.html  trade_list.html  trade_update.html
