[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm_system"
version = "0.1.0"
description = "Trade Management"
authors = [{ name = "Angeli", email = "" }]
license = "MIT"
readme = "README.md"

# Specify where your packages are
packages = ['banks', 'static', 'trades', 'traders', 'TMSystem', 'templates']