[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm_system"
version = "0.1.0"
description = "Trade Management"
authors = [{ name = "Angeli", email = "alvarezangelirozba@outlook.com" }]
readme = "README.md"


[tool.setuptools.packages.find]
where = ["."]